terraform/06.routetable.tf
resource "aws_route_table" "public_rt" {
  vpc_id = aws_vpc.raku_vpc.id

  route {
    cidr_block = "10.0.0.0/16"
    gateway_id = "local"
  }

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.igw.id
  }
}

resource "aws_route_table" "private_rt" {
  vpc_id = aws_vpc.raku_vpc.id

  route {
    cidr_block = "10.0.0.0/16"
    gateway_id = "local"
  }

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_nat_gateway.natgw.id
  }
}

resource "aws_route_table_association" "rt_pub01" {
  subnet_id      = aws_subnet.raku_pub01_2a.id
  route_table_id = aws_route_table.public_rt.id
}

resource "aws_route_table_association" "rt_pvt01" {
  subnet_id      = aws_subnet.raku_pvt01_2c.id
  route_table_id = aws_route_table.private_rt.id
}

resource "aws_route_table_association" "rt_pvt02" {
  subnet_id      = aws_subnet.raku_pvt02_2a.id
  route_table_id = aws_route_table.private_rt.id
}
